--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "config": "^3.3.9",
     "fluent": "^0.13.0",
     "fluent-ffmpeg": "^2.1.2",
+    "jsonwebtoken": "^9.0.1",
     "openai": "^3.3.0",
     "telegraf": "^4.12.2"
   }
